# lila-game-bot

./: .gitignore  main.py  pyproject.toml
src/: config.py
src/handlers/: __init__.py  admin.py
src/handlers/user/: game.py
src/service/: user.py
src/service/user/: __init__.py  schemas.py  service.py
src/utils/: logger.py  middleware.py  tools.py
