[project]
name = "lila-game-bot"
version = "1.0.0"
description = "Telegram game"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiocron>=2.1",
    "aiogram>=3.27.0",
    "aiosqlite>=0.22.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]
